Project extension
Adding tests.
Endpoint improvement.
JavaFx added (none here).
Other changes.
