# src/main/java/pl/wsb/students/consts/ApiEndpoints.java
@@ -12,8 +12,8 @@ public class ApiEndpoints {
     public static final String MOVIE_COMMENT = "/comment";                                                              //POST
     public static final String MOVIE_ID_ACCEPT = ApiEndpoints.QUERY_PARAM_ID + "/accept";                               //PUT
     public static final String MOVIE_ID_REJECT = ApiEndpoints.QUERY_PARAM_ID + "/reject";                               //PUT
-    public static final String USER_ID_UPDATE = ApiEndpoints.QUERY_PARAM_ID;                                            //PUT
-    public static final String USER_ID_LOGOUT = ApiEndpoints.QUERY_PARAM_ID + "/logout";                                //PUT
+    public static final String USER_UPDATE = "/edit";                                                                   //PUT
+    public static final String USER_LOGOUT = "/logout";                                                                 //POST
 
     public static final String PARAM_LIMIT = "limit";
     public static final String PARAM_OFFSET = "offset";
