# src/main/java/pl/wsb/students/model/LogOutUserRequest.java
@@ -1,6 +1,6 @@
 /*
- * Java WSB Course Sample Movie App API
- * Sample Movie App API
+ * Java WSB Course Sample MovieResponse App API
+ * Sample MovieResponse App API
  *
  * OpenAPI spec version: 0.0.1
  * 
@@ -26,11 +26,11 @@ import javax.validation.constraints.*;
  */
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2020-06-11T08:36:54.348Z")
 public class LogOutUserRequest   {
-  @JsonProperty("id")
-  private Integer id = null;
+  @JsonProperty("email")
+  private String email = null;
 
-  public LogOutUserRequest id(Integer id) {
-    this.id = id;
+  public LogOutUserRequest email(String email) {
+    this.email = email;
     return this;
   }
 
@@ -38,15 +38,15 @@ public class LogOutUserRequest   {
    * User id
    * @return id
    **/
-  @JsonProperty("id")
-  @ApiModelProperty(required = true, value = "User id")
+  @JsonProperty("email")
+  @ApiModelProperty(required = true, value = "User email address")
   @NotNull
-  public Integer getId() {
-    return id;
+  public String getEmail() {
+    return email;
   }
 
-  public void setId(Integer id) {
-    this.id = id;
+  public void setEmail(String email) {
+    this.email = email;
   }
 
 
@@ -58,13 +58,13 @@ public class LogOutUserRequest   {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    LogOutUserRequest logOutUserRequest = (LogOutUserRequest) o;
-    return Objects.equals(this.id, logOutUserRequest.id);
+    LogOutUserRequest logoutUserRequest = (LogOutUserRequest) o;
+    return Objects.equals(this.email, logoutUserRequest.email);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(id);
+    return Objects.hash(email);
   }
 
 
@@ -72,8 +72,8 @@ public class LogOutUserRequest   {
   public String toString() {
     StringBuilder sb = new StringBuilder();
     sb.append("class LogOutUserRequest {\n");
-    
-    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+
+    sb.append("    email: ").append(toIndentedString(email)).append("\n");
     sb.append("}");
     return sb.toString();
   }
@@ -87,6 +87,12 @@ public class LogOutUserRequest   {
       return "null";
     }
     return o.toString().replace("\n", "\n    ");
+  }
+
+  public void validateData() throws ValidationException {
+    if (StringUtils.isBlank(this.email)) {
+      throw new ValidationException("Please provide email...");
+    }
   }
 }
 
